# sensyne_homework

./: Makefile  README.md  docker-compose.yml  pyproject.toml
sensyne/: manage.py
sensyne/marketplace/: models.py  serializers.py  views.py
sensyne/marketplace/migrations/: 0001_initial.py
sensyne/sensyne/: asgi.py  settings.py  urls.py  wsgi.py
